refactor: disconnectSection메소드를 findUpdateSectionWhenDisconnect로 변경한다